--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     />
     <title>S0LACE</title>
 
-    <link rel="shortcut icon" content="favicon.webp" />
+    <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
 
     <!-- Global hub behavior: theme + tab cloaking -->
