--- a/public/games.html
+++ b/public/games.html
@@ -218,6 +218,7 @@
         <a href="index.html">Home</a>
         <a href="games.html" class="active">Games</a>
         <a href="media.html">Media</a>
+        <a href="apps.html">Apps</a>
         <a href="settings.html">Settings</a>
       </nav>
     </header>
@@ -311,6 +312,28 @@
           <div class="game-thumb">
             <img src="thumbs/deadlydescent.jpeg" alt="Deadly Descent" />
             <div class="game-overlay">Deadly Descent</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/level-devil/index.html"
+          data-name="level-devil"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/leveldevil.jpeg" alt="Levil Devil" />
+            <div class="game-overlay">Level Devil</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/cluster-rush/index.html"
+          data-name="clusterrush"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/cluster-rush.jpeg" alt="ClusterRush" />
+            <div class="game-overlay">Cluster Rush</div>
           </div>
         </a>
 
