--- a/public/index.html
+++ b/public/index.html
@@ -6,218 +6,27 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>S0LACE</title>
+    <title>S0LACE • Proxy</title>
 
     <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
 
-    <!-- Global hub behavior: theme + tab cloaking -->
-    <script src="global-hub.js" defer></script>
-
-    <!-- Scramjet core – DO NOT REMOVE -->
-    <script src="/scram/scramjet.all.js"></script>
+    <!-- Scramjet stack (keep these paths matching your working setup) -->
+    <script src="/scramjet/scramjet.all.js"></script>
     <script src="baremux/index.js" defer></script>
     <script src="epoxy/index.js" defer></script>
     <script src="register-sw.js" defer></script>
     <script src="search.js" defer></script>
     <script src="index.js" defer></script>
 
-    <style>
-      :root {
-        --bg: #050814;
-        --panel: #06091b;
-        --fg: #f9fafb;
-        --fg-dim: #9ca3af;
-        --accent: #3b82f6;
-        --accent-soft: rgba(37, 99, 235, 0.28);
-        --header-h: 56px;
-      }
-
-      /* body layout comes from index.css (flex column).
-         Here we just override background + text color for this page. */
-      body {
-        background: radial-gradient(circle at top, #0b1220 0, #020617 55%, #000 100%);
-        color: var(--fg);
-      }
-
-      /* HEADER */
-      .site-header {
-        position: sticky;
-        top: 0;
-        z-index: 50;
-        height: var(--header-h);
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 18px;
-        background: rgba(3, 7, 18, 0.9);
-        backdrop-filter: blur(10px);
-        border-bottom: 1px solid rgba(148, 163, 184, 0.1);
-      }
-
-      .site-title {
-        font-size: 15px;
-        font-weight: 600;
-      }
-
-      .site-title span {
-        opacity: 0.6;
-        font-weight: 400;
-        font-size: 12px;
-        margin-left: 4px;
-      }
-
-      .site-nav {
-        display: flex;
-        gap: 10px;
-        font-size: 13px;
-      }
-
-      .site-nav a {
-        text-decoration: none;
-        padding: 6px 10px;
-        border-radius: 999px;
-        border: 1px solid transparent;
-        color: #9ca3af;
-        cursor: pointer;
-        transition: 0.15s ease;
-      }
-
-      .site-nav a:hover {
-        border-color: rgba(148, 163, 184, 0.4);
-        color: var(--fg);
-        background: rgba(15, 23, 42, 0.8);
-      }
-
-      .site-nav a.active {
-        border-color: rgba(59, 130, 246, 0.8);
-        background: rgba(37, 99, 235, 0.35);
-        color: var(--fg);
-      }
-
-      /* MAIN LAYOUT */
-      .home-page {
-        flex: 1;
-        min-height: calc(100vh - var(--header-h));
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 24px 16px 32px;
-      }
-
-      .home-card {
-        width: 100%;
-        max-width: 640px;
-        padding: 24px 20px 20px;
-        border-radius: 18px;
-        background: radial-gradient(circle at top left, #111827 0, #020617 60%);
-        border: 1px solid rgba(148, 163, 184, 0.18);
-        box-shadow: 0 24px 80px rgba(0, 0, 0, 0.8);
-      }
-
-      .home-title {
-        font-size: 24px;
-        font-weight: 700;
-        margin: 0 0 4px;
-        text-align: center;
-      }
-
-      .home-sub {
-        margin: 0 0 20px;
-        text-align: center;
-        font-size: 13px;
-        color: var(--fg-dim);
-      }
-
-      /* SEARCH */
-      #sj-form {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 14px;
-      }
-
-      /* Uses your base #sj-address styling from index.css;
-         we just widen it a bit on this page. */
-      #sj-address {
-        width: 100%;
-        max-width: 560px;
-      }
-
-      #sj-address::placeholder {
-        color: #6b7280;
-      }
-
-      /* RANDOM MESSAGE */
-      .home-random-wrap {
-        margin-top: 4px;
-      }
-
-      #random-message {
-        font-size: 13px;
-        color: var(--fg);
-        background: rgba(15, 23, 42, 0.9);
-        border-radius: 999px;
-        border: 1px solid rgba(148, 163, 184, 0.25);
-        padding: 9px 14px;
-        text-align: center;
-        cursor: pointer;
-        user-select: none;
-        transition: background 0.15s ease, border-color 0.15s ease,
-          transform 0.08s ease;
-      }
-
-      #random-message:hover {
-        background: var(--accent-soft);
-        border-color: rgba(59, 130, 246, 0.9);
-        transform: translateY(-1px);
-      }
-
-      .random-hint {
-        margin-top: 4px;
-        font-size: 11px;
-        text-align: center;
-        color: var(--fg-dim);
-      }
-
-      /* ERROR AREA (Scramjet) */
-      .home-error {
-        min-height: 18px;
-        margin-top: 12px;
-        font-size: 11px;
-        color: #fda4af;
-        white-space: pre-wrap;
-      }
-
-      #sj-error-code {
-        margin: 4px 0 0;
-      }
-
-      .home-footer {
-        margin-top: 16px;
-        font-size: 11px;
-        color: #6b7280;
-        display: flex;
-        justify-content: space-between;
-        gap: 8px;
-        flex-wrap: wrap;
-      }
-
-      .home-footer a {
-        color: #9ca3af;
-        text-decoration: none;
-        margin-right: 6px;
-      }
-
-      .home-footer a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <script src="global-hub.js" defer></script>
   </head>
 
   <body>
     <header class="site-header">
       <div class="site-title">
         S0LACE
+        <span>black dungeon // proxy</span>
       </div>
       <nav class="site-nav">
         <a href="index.html" class="active">Home</a>
@@ -228,83 +37,76 @@
       </nav>
     </header>
 
-    <main class="home-page">
-      <section class="home-card">
-        <h1 class="home-title">S0LACE</h1>
-        <p class="home-sub">1.0</p>
+    <main>
+      <div class="page-header">
+        <h1>Proxy</h1>
+        <p class="sub">
+          Enter the <span>dungeon gateway</span>. URLs, searches, whatever —
+          the door opens either way.
+        </p>
+      </div>
 
-        <!-- Scramjet search – IDs MUST stay the same -->
-        <form id="sj-form">
-          <input
-            id="sj-search-engine"
-            value="https://www.google.com/search?q=%s"
-            type="hidden"
-          />
-          <input
-            id="sj-address"
-            type="text"
-            placeholder="https://example.com or search the web..."
-          />
-        </form>
-
-        <!-- RANDOM MESSAGE (click text to change) -->
-        <div class="home-random-wrap">
-          <div id="random-message">
-            Loading…
-        </div>
-
-        <!-- Scramjet error output -->
-        <div class="home-error">
-          <p id="sj-error"></p>
-          <pre id="sj-error-code"></pre>
-        </div>
-
-        <div class="home-footer">
-          <div>
-            <a
-              title="The Mercury Workshop GitHub organization"
-              href="https://github.com/MercuryWorkshop"
-              >Mercury Workshop</a
-            >
-            <a
-              title="The example demo app for Scramjet"
-              href="https://github.com/granthhss0/S0LACEFINAL"
-              >GitHub</a>
+      <div class="home-layout">
+        <!-- left: MOTD + proxy search -->
+        <section class="home-panel">
+          <div class="motd-label">MESSAGE OF THE DUNGEON (CLICK TO CYCLE)</div>
+          <div id="motd">
+            loading dungeon whispers...
           </div>
-          <div>TRINITY &copy; 2025</div>
-        </div>
-      </section>
+
+          <div style="margin-top: 14px;">
+            <div class="proxy-label">GATEWAY &gt;</div>
+            <form id="sj-form">
+              <input
+                id="sj-search-engine"
+                value="https://www.google.com/search?q=%s"
+                type="hidden"
+              />
+              <input
+                id="sj-address"
+                type="text"
+                placeholder="type a url or search..."
+              />
+              <button class="proxy-btn" type="submit">GO</button>
+            </form>
+            <div id="sj-error"></div>
+            <pre id="sj-error-code"></pre>
+          </div>
+        </section>
+
+        <!-- right: quick links / status -->
+        <section class="home-panel">
+          <div class="motd-label">DUNGEON MAP</div>
+          <ul style="list-style: none; padding-left: 0; font-size: 8px;">
+            <li>▌ <a href="games.html">Games</a> – arcade grid of tiles</li>
+            <li>▌ <a href="media.html">Media</a> – coming soon</li>
+            <li>▌ <a href="apps.html">Apps</a> – tools & toys</li>
+            <li>▌ <a href="settings.html">Settings</a> – cloak & tweaks</li>
+          </ul>
+        </section>
+      </div>
     </main>
 
     <script>
-      // Random messages – edit these to whatever you want
-      const SJ_MESSAGES = [
-        "i wanna go homeeeee",
-        "ik this site sucks",
-        "trinity WAS peak", 
-        "made in school",
-        "this coding stuff confuzzling",
-        "jollybaby stickers coming soon",
-        "it takes sooooo long to add games',
-        "i am become niche",
-        "joe bart garfield",
-        "do not use the proxy for freaky stuff you know who you are."
+      // simple random message system
+      const motdEl = document.getElementById("motd");
+      const lines = [
+        "you feel like something is watching from the tabs bar.",
+        "xp +5: you discovered an unblocked doorway.",
+        "rumor: a secret game lies behind a typo'd url.",
+        "tip: hover tiles in the games dungeon to reveal names.",
+        "note: teachers fear what they cannot see.",
+        "proxy spell: type anything. the dungeon will translate."
       ];
 
-      function setRandomMessage() {
-        const box = document.getElementById("random-message");
-        if (!box || !SJ_MESSAGES.length) return;
-        const idx = Math.floor(Math.random() * SJ_MESSAGES.length);
-        box.textContent = SJ_MESSAGES[idx];
+      function setRandomMotd() {
+        if (!motdEl) return;
+        const i = Math.floor(Math.random() * lines.length);
+        motdEl.textContent = lines[i];
       }
 
-      document.addEventListener("DOMContentLoaded", () => {
-        const box = document.getElementById("random-message");
-        setRandomMessage();
-        if (box) {
-          box.addEventListener("click", setRandomMessage);
-        }
-      });
+      motdEl?.addEventListener("click", setRandomMotd);
+      setRandomMotd();
     </script>
   </body>
 </html>
