--- a/public/media.html
+++ b/public/media.html
@@ -45,20 +45,17 @@
       <div class="media-grid" id="media-grid">
         <!-- data-title used for search
              data-src   is what mediaplayer.html will iframe -->
-        <a
-          class="media-card"
-          href="#"
-          data-title="Interstellar"
-          data-src="/scramjet/https://google.com"
-        >
-          <div class="poster-thumb">
-            <img
-              src="thumbs/interstellar-poster.jpg"
-              alt=""
-            />
-            <div class="media-overlay">BROKEN</div>
-          </div>
-        </a>
+       <a
+  class="media-card"
+  href="#"
+  data-title="Interstellar"
+  data-src="https://example.com"
+>
+  <div class="poster-thumb">
+    <img src="thumbs/interstellar-poster.jpg" alt="" />
+    <div class="media-overlay">BROKEN</div>
+  </div>
+</a>
 
         <!-- add more media-card blocks here -->
       </div>
