--- a/public/index.html
+++ b/public/index.html
@@ -168,13 +168,13 @@
 
             <a
               class="popular-pill"
-              href="player.html?game=games/geometrydash/index.html"
+              href="player.html?game=games/gun-spin/index.html"
             >
               <span
                 class="pill-thumb"
-                style="background-image: url('thumbs/geometrydash.png');"
+                style="background-image: url('thumbs/gun-spin.jpeg');"
               ></span>
-              <span class="pill-name">Geometry&nbsp;Dash</span>
+              <span class="pill-name">Gun&nbsp;Spin</span>
             </a>
 
             <a
@@ -201,13 +201,13 @@
 
             <a
               class="popular-pill"
-              href="player.html?game=games/snow-rider/index.html"
+              href="player.html?game=games/drift-boss/index.html"
             >
               <span
                 class="pill-thumb"
-                style="background-image: url('thumbs/snow-rider.jpeg');"
+                style="background-image: url('thumbs/drift-boss.jpeg');"
               ></span>
-              <span class="pill-name">Snow&nbsp;Rider&nbsp;3D</span>
+              <span class="pill-name">Drift&nbsp;Boss</span>
             </a>
           </div>
         </div>
@@ -224,7 +224,9 @@
         "i hate adding games",
         "rip trinity",
         "jollybaby stickers on top",
-        "go check out aurababy"
+        "go check out aurababy",
+        "i wanna go homeeee",
+        "make me less ncihe"
       ];
 
       function setRandomMotd() {
