--- a/public/tvplayer.html
+++ b/public/tvplayer.html
@@ -350,7 +350,7 @@
         // open in new tab (direct CinemaOS)
         if (openNewTabBtn) {
           openNewTabBtn.addEventListener("click", () => {
-            const direct = `https://cinemaos.tech/player/${tmdbId}/${currentSeason}/${currentEpisode}`;
+            const direct = `https://vidfast.pro/tv/${ID}/${season}/${episode}`;
             window.open(direct, "_blank");
           });
         }
@@ -372,7 +372,7 @@
         }
 
         function updateFrame() {
-          const src = `/scramjet/https://cinemaos.tech/player/${tmdbId}/${currentSeason}/${currentEpisode}`;
+          const src = `/scramjet/https://vidfast.pro/tv/${ID}/${season}/${episode}`;
           if (frame) frame.src = src;
           if (titleEl) {
             titleEl.textContent = `${titleParam}  S${currentSeason}E${currentEpisode}`;
