--- a/public/games.html
+++ b/public/games.html
@@ -84,7 +84,7 @@
           href="player.html?game=games/stunt-bike-extreme/index.html"
           data-name="stuunt bike extreme"
         >
-          <div class="game-thumb"
+          <div class="game-thumb">
             <img src="thumbs/stunt-bike-extreme.png" alt="stunt bike" />
             <div class="game-overlay">Stunt Bike Extreme</div>
           </div>
