--- a/public/games.html
+++ b/public/games.html
@@ -136,6 +136,61 @@
 
         <a
           class="game-card"
+          href="player.html?game=games/musicplayer/index.html"
+          data-name="music"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/music.png" alt="music" />
+            <div class="game-overlay">Music Player</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/tanukisunset.html"
+          data-name="tanuki sunset"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/tanukisunset.png" alt="tanuki" />
+            <div class="game-overlay">Tanuki Sunset</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/trafficjam.html"
+          data-name="traffic jam"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/trafficjam.png" alt="traffic" />
+            <div class="game-overlay">Traffic Jam 3D</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/undertale.html"
+          data-name="undertale"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/undertale.png" alt="undertale" />
+            <div class="game-overlay">Undertale Yellow</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/gladdihoppers.html"
+          data-name="gladdihoppers"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/gladdihoppers.png" alt="img" />
+            <div class="game-overlay">Gladihoppers</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
           href="player.html?game=games/deadlydescent/index.html"
           data-name="deadlydescent"
         >
