--- a/public/settings.html
+++ b/public/settings.html
@@ -25,7 +25,9 @@
         <a href="index.html">Home</a>
         <a href="games.html">Games</a>
         <a href="media.html">Media</a>
-        <a href="settings.html" class="active">Settings</a>
+        <a href="account.html" class="account-icon-link">
+      <img id="account-icon" src="thumbs/acc/green.png" alt="Account" />
+    </a>
       </nav>
     </header>
 
