--- a/public/account.html
+++ b/public/account.html
@@ -7,64 +7,121 @@
 
   <link rel="stylesheet" href="index.css">
   <script src="global-hub.js" defer></script>
+
+  <!-- IMPORTANT: load Firebase config first -->
+  <script type="module" src="firebase-init.js"></script>
   <script type="module" src="account.js" defer></script>
+
+  <style>
+    .account-box {
+      border: 2px solid var(--border-hard);
+      background: var(--panel);
+      padding: 14px;
+      margin-bottom: 18px;
+    }
+
+    .section-title {
+      font-size: 9px;
+      color: var(--fg-dim);
+      margin-bottom: 6px;
+    }
+
+    .account-input {
+      width: 100%;
+      padding: 8px 10px;
+      margin: 6px 0;
+      border: 2px solid var(--border-hard);
+      background: #000;
+      color: var(--fg);
+      font-family: "Press Start 2P";
+    }
+
+    .account-btn, .sync-btn {
+      width: 100%;
+      padding: 8px;
+      margin-top: 10px;
+      border: 2px solid var(--accent);
+      background: var(--accent-soft);
+      color: var(--accent);
+      font-family: "Press Start 2P";
+      font-size: 9px;
+      cursor: pointer;
+      text-align: center;
+      display: block;
+    }
+
+    .account-btn:hover, .sync-btn:hover {
+      background: rgba(0,255,127,0.25);
+      box-shadow: 0 0 10px var(--accent);
+    }
+
+    #logged-in-box {
+      border: 2px solid var(--border-hard);
+      background: var(--panel);
+      padding: 14px;
+      margin-bottom: 18px;
+    }
+
+    #logged-in-email {
+      font-size: 9px;
+      color: var(--accent);
+      margin-bottom: 10px;
+    }
+  </style>
+
 </head>
 
 <body>
-  <header class="site-header">
-    <div class="site-title">S0LACE</div>
-    <nav class="site-nav">
-      <a href="index.html">Home</a>
-      <a href="games.html">Games</a>
-      <a href="media.html">Media</a>
-      <a href="account.html" class="active">
-        <img src="icons/acc-green.png" id="account-icon" class="nav-account-icon">
-      </a>
-    </nav>
-  </header>
 
-  <main class="account-container">
+<header class="site-header">
+  <div class="site-title">S0LACE</div>
+  <nav class="site-nav">
+    <a href="index.html">Home</a>
+    <a href="games.html">Games</a>
+    <a href="media.html">Media</a>
+    <a href="settings.html">Settings</a>
+    <a href="account.html" class="active account-icon-wrap">
+      <img src="acc-green.png" id="account-icon" style="width:14px;height:14px;filter:brightness(1.3);">
+    </a>
+  </nav>
+</header>
 
-    <!-- LOGGED IN -->
-    <div id="logged-in-box" style="display:none;">
-      <div id="logged-in-email"></div>
+<main>
 
-      <button id="save-cloud" class="sync-btn">Save Settings to Cloud</button>
-      <button id="load-cloud" class="sync-btn">Sync Settings</button>
-      <button id="logout-btn" class="sync-btn" style="border-color:red;color:red;">Logout</button>
-    </div>
+  <!-- LOGGED-IN UI -->
+  <div id="logged-in-box" style="display:none;">
+    <div id="logged-in-email"></div>
 
-    <!-- LOGIN -->
-    <div class="account-box" id="login-box">
-      <div class="section-title">LOG IN</div>
+    <button id="save-cloud" class="sync-btn">Save Settings to Cloud</button>
+    <button id="sync-cloud" class="sync-btn">Sync Settings</button>
+    <button id="logout-btn" class="sync-btn" style="color:#ff4444;border-color:#ff4444;">Log Out</button>
+  </div>
 
-      <form id="login-form">
+  <!-- LOGIN -->
+  <div class="account-box" id="login-box">
+    <div class="section-title">LOG IN</div>
 
-        <input type="email" id="login-email" class="account-input" placeholder="Email" autocomplete="email" required>
+    <form id="login-form">
+      <input type="email" id="login-email" class="account-input" placeholder="Email" autocomplete="email" required>
+      <input type="password" id="login-pass" class="account-input" placeholder="Password" autocomplete="current-password" required>
 
-        <input type="password" id="login-pass" class="account-input" placeholder="Password" autocomplete="current-password" required>
+      <button type="submit" id="login-btn" class="account-btn">Log In</button>
+    </form>
+  </div>
 
-        <button type="submit" id="login-btn" class="account-btn">Log In</button>
-      </form>
+  <!-- SIGNUP -->
+  <div class="account-box" id="signup-box">
+    <div class="section-title">CREATE ACCOUNT</div>
 
-    </div>
+    <form id="signup-form">
+      <input type="email" id="signup-email" class="account-input" placeholder="Email" required>
+      <input type="password" id="signup-pass" class="account-input" placeholder="Password" required>
 
-    <!-- SIGN UP -->
-    <div class="account-box" id="signup-box">
-      <div class="section-title">CREATE ACCOUNT</div>
+      <button type="submit" id="signup-btn" class="account-btn">Create Account</button>
+    </form>
+  </div>
 
-      <form id="signup-form">
-
-        <input type="email" id="signup-email" class="account-input" placeholder="Email" autocomplete="email" required>
-
-        <input type="password" id="signup-pass" class="account-input" placeholder="Password" autocomplete="new-password" required>
-
-        <button type="submit" id="signup-btn" class="account-btn">Create Account</button>
-      </form>
-
-    </div>
-
-  </main>
+</main>
 
 </body>
 </html>
