--- a/public/games.html
+++ b/public/games.html
@@ -195,6 +195,17 @@
 
         <a
           class="game-card"
+          href="player.html?game=games/freerider/index.html"
+          data-name="freerider"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/freerider.png" alt="freeride" />
+            <div class="game-overlay">Free Rider</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
           href="player.html?game=games/undertale.html"
           data-name="undertale"
         >
@@ -443,6 +454,61 @@
           <div class="game-thumb">
             <img src="thumbs/x3m2.jpeg" alt="x3m2" />
             <div class="game-overlay">Moto X3M 2</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/btd/5.html"
+          data-name="bloons td 5"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/btd5.jpeg" alt="btd5" />
+            <div class="game-overlay">Bloons TD5</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/vex/1.html"
+          data-name="vex"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/vex.jpeg" alt="vex" />
+            <div class="game-overlay">Vex</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/vex/2.html"
+          data-name="vex2"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/vex2.jpeg" alt="vex2" />
+            <div class="game-overlay">Vex 2</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/unfairmario.html"
+          data-name="unfair mario"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/unfairmario.jpeg" alt="unfair" />
+            <div class="game-overlay">Unfair Mario</div>
+          </div>
+        </a>
+
+        <a
+          class="game-card"
+          href="player.html?game=games/whg.html"
+          data-name="worlds hardest game"
+        >
+          <div class="game-thumb">
+            <img src="thumbs/whg.jpeg" alt="whg" />
+            <div class="game-overlay">Worlds Hardest Game</div>
           </div>
         </a>
 
